@@ -1,0 +1,3 @@
+<div class="qrbox featured" tal:condition="view/available">
+  <div tal:replace="structure context/qrbox" />
+</div>
