@@ -3,6 +3,9 @@ Changelog
 
 9.8-dev - (unreleased)
 ----------------------
+* Feature: Added QR Box viewlet at the bottom of the content. Right now it's
+  hidden from CSS and it can be enabled via custom CSS rules
+  [voineali refs #19959]
 * Change: removed short_colophon login since multimedia_view is no longer applied
   on site and the pdf output was complaining about getLayout call when using the
   main_template macros
